--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "backbone-on-express",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Backbone for node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
   },
   "repository": "",
   "author": {
@@ -20,7 +18,12 @@
     "requirejs": ">=2.1.2",
     "express-ejs-layouts": ">=0.3.1",
     "colors": ">=0.6.0-1",
-    "amdefine": ">=0.0.4"
+    "amdefine": ">=0.0.4",
+    "anvil": ">=0.9.0",
+    "anvil.scaffold.backboneonexpress": ">=0.2.1"
+  },
+  "bin": {
+    "backbone": "bin/backbone"
   },
   "repository": {
     "type": "git",
